# anchorshield

./: .gitattributes  .gitignore  AI_USAGE.md  AUDIT_REMEDIATION_SCOPE.md  CIRCUIT_HARDENING_TASK.md  Cargo.toml  E2E_ONCHAIN_TASK.md  HSK_WEBSITE_FEATURES.md  INTEGRATION_RECIPE_TASK.md  LICENSE  ONBOARDING_BUILD_SCOPE.md  ONBOARDING_CUTOVER_SCOPE.md  POLICY_COMPOSER_TASK.md  PRODUCTIONIZATION_SCOPE.md  README.md  REMAINING_SCOPE.md  RESUME_ENROLLED_WALLET_TASK.md  SECURITY.md  SIGNER_BUILD_SCOPE.md  SUBMISSION.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
apps/web/: anchor.html  auditor.html  composer.html  console.html  developers.html  gates.html  index.html  issuer.html  onchain.html  rwa.html  vault.html
apps/web/assets/: anchor-live.js  app.js  auditor-live.js  blind.js  composer.js  groth16-convert.js  groth16-convert.test.js  kyc-live.js  rwa-live.js  styles.css
apps/web/data/: auditor-demo-key.json  compliance-events.json  deployments.json  disclosure-summary.json  disclosure-vault.json  gate-payment-spec.json  mock-anchor.json  payment-disclosure.json  payment-input.json  payment-proof-pool.json  poseidon255-t3.json  rwa-input.json  verification_key.json
apps/web/proving/: eligibility.wasm
circuits/: eligibility.circom
contracts/gate_payment/: Cargo.toml
contracts/gate_payment/src/: lib.rs  test.rs
contracts/gate_rwa/: Cargo.toml
contracts/gate_rwa/src/: lib.rs  test.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/identity_verifier/: Cargo.toml
contracts/identity_verifier/src/: lib.rs  test.rs
contracts/issuer_registry/: Cargo.toml
contracts/issuer_registry/src/: lib.rs  test.rs
contracts/nullifier_registry/: Cargo.toml
contracts/nullifier_registry/src/: lib.rs
contracts/policy_registry/: Cargo.toml
contracts/policy_registry/src/: lib.rs
contracts/rwa_compliance_adapter/: Cargo.toml
contracts/rwa_compliance_adapter/src/: lib.rs  test.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
deployments/: admin-governance.mainnet.example.json  governance.config.example.json  testnet-hardened.json  testnet.json
docs/: ANCHOR_SANDBOX.md  BENCHMARKS.md  BUILD-PLAN.md  CEREMONY.md  DEVIATIONS.md  GOVERNANCE.md  GO_LIVE.md  INTEGRATION.md  KYC_SANDBOX.md  M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  MAINNET_READINESS.md  MAINNET_RUNBOOK.md  OPERATIONS.md  PUBLISH_CHECKLIST.md  ROADMAP.md  SDK.md  SECURITY_REVIEW.md  SIGNER_DEPLOY.md  STRETCH.md  THREAT_MODEL.md  WALLET_E2E.md
docs/benchmarks/: latest.json
docs/systemd/: anchorshield-kyc.service  anchorshield-signer.service
examples/airdrop_gate/: Cargo.toml  README.md
examples/airdrop_gate/src/: lib.rs  test.rs
examples/airdrop_gate/test_snapshots/test/: admin_transfer_matches_contract_pattern.1.json  attested_account_claims_once.1.json  expired_attestation_cannot_claim.1.json  unattested_account_cannot_claim.1.json
scripts/: _sh.mjs  benchmarks.mjs  bucket-b-gates.test.mjs  bucket-b-preflight.mjs  build-poseidon-web-data.mjs  build-proof-pool.mjs  ceremony.sh  check-web-security.mjs  circuit-smoke.mjs  deploy-testnet.sh  gen-voucher-key.mjs  groth16-convert.test.js  m1-circuit-smoke.js  m1-circuit-smoke.ps1  m5-verify.ps1  m6-verify.ps1  mainnet-preflight.mjs  make-demo-witness.mjs  publish-preflight.mjs  serve-web.mjs  serve-web.test.mjs  test.sh  verify-packages.mjs  verify.mjs
services/anchor/: anchor.config.example.json  anchor.config.testanchor.json  run-testanchor.mjs  sep-client.js  sep-client.test.js
services/disclosure/: build-web-packet.js  disclosure.js  vault.js  vault.test.js
services/indexer/: build-index.js  compliance-events.json
services/indexer/raw/: payment-events.json  rwa-events.json
services/issuer/: enrollment-store.js  issue.js  kyc-enrich.js  kyc-validate.js  ofac-sync.js  ops.js  ops.test.js  publish-roots.js  test.js
services/issuer/data/: revocations.json  roster.json  sample-sdn.csv
services/issuer/lib/: kyc.js  kyc.test.js  ofac.js  zk-tree.js
services/kyc-backend/: blind-voucher.js  issuer-directory.js  server.js  server.test.js
services/mock-anchor/: sep-adapter.js  sep-adapter.test.js
services/monitoring/: monitor.js  monitor.test.js
services/monitoring/fixtures/: events.json
services/signer/: README.md  client.js  signer.js  signer.test.js
services/wallet-e2e/: freighter-harness.js  freighter-harness.test.js  onchain-e2e.mjs  onchain-e2e.test.mjs
testdata/disclosure/: payment-disclosure.json  summary.json  vault.json
testdata/eligibility/: cli-args.json  input.valid.json  proof.json  public.json  summary.json  verification_key.json
testdata/rwa/: cli-args.json  input.valid.json  proof.json  public.json  summary.json  verification_key.json
tools/groth16-json-converter/: Cargo.toml
tools/groth16-json-converter/src/: lib.rs  main.rs
(+2 files in other folders)
