# AnchorShield contracts workspace.
# Vendored upstreams (.upstream/*) and the std-only converter (tools/*) are excluded;
# they build independently with their own manifests.
[workspace]
resolver = "2"
members = [
    "contracts/shared",
    "contracts/verifier",
    "contracts/issuer_registry",
    "contracts/policy_registry",
    "contracts/nullifier_registry",
    "contracts/gate_payment",
    "contracts/gate_rwa",
]
exclude = [
    ".upstream",
    "tools",
]

# Soroban contract release settings live at the workspace root (Cargo ignores
# profile tables in workspace members).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
