[package]
name = "anchorshield-gate-payment"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=25.1.0" }
anchorshield-shared = { path = "../shared" }

[dev-dependencies]
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soroban-sdk = { version = "=25.1.0", features = ["testutils"] }
