[package]
name = "anchorshield-governance"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=26.1.0" }
anchorshield-shared = { path = "../shared" }

[dev-dependencies]
anchorshield-gate-payment = { path = "../gate_payment" }
anchorshield-issuer-registry = { path = "../issuer_registry" }
soroban-sdk = { version = "=26.1.0", features = ["testutils"] }
