[package]
name = "anchorshield-rwa-compliance-adapter"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=26.1.0" }

[dev-dependencies]
anchorshield-identity-verifier = { path = "../identity_verifier" }
anchorshield-issuer-registry = { path = "../issuer_registry" }
anchorshield-nullifier-registry = { path = "../nullifier_registry" }
anchorshield-policy-registry = { path = "../policy_registry" }
anchorshield-shared = { path = "../shared" }
anchorshield-verifier = { path = "../verifier" }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soroban-sdk = { version = "=26.1.0", features = ["testutils"] }
